# r2morph

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PHASE2_SUMMARY.md  README.md  coverage.json  debug_offsets.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
.planning/: ABI_ENFORCEMENT_PLAN.md  ARM32_X8632_PLAN.md  BINARY_INTEGRITY_PLAN.md  BUG_ANALYSIS.md  BUG_ANALYSIS_ROUND2.md  BUG_ANALYSIS_ROUND3.md  BUG_ANALYSIS_ROUND4.md  BUG_ANALYSIS_ROUND5.md  BUG_ANALYSIS_ROUND6.md  BUG_ANALYSIS_ROUND7.md  CFG_HARDENING_IMPLEMENTATION.md  CFG_HARDENING_PLAN.md  DETERMINISTIC_SEED_PLAN.md  FEATURE_ROADMAP.md  IMPLEMENTATION_PLAN_P0_P3.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md
.planning/research/: PROJECT_ANALYSIS.md
dataset/: _tmp_elf_test  elf_x86_64.S  ls  ls_macOS  macho_arm64  macho_arm64.c  pe_x86_64.S  runtime_corpus.json  runtime_corpus_args_env.json  runtime_corpus_files.json
docs/: API.md  ARCHITECTURE.md  ROADMAP.md  abi_hooks.md  enhanced_analysis.md  troubleshooting.md
examples/: advanced_analysis.py  advanced_mutations.py  basic_analysis.py  basic_usage.py  comprehensive_validation.py  custom_pass.py  enhanced_obfuscated_analysis.py  morph_binary.py  mutation_workflow.py  performance_optimization.py  phase2_advanced_analysis.py  validation_example.py
fixtures/optimized_binaries/: exception_test  exception_test.cpp  plt_test.c  switch_test.c  tailcall_test.c
r2morph/: CLAUDE.md  __init__.py  cli.py  cli_cache_command.py  cli_cache_output.py  cli_output_helpers.py  cli_path_resolution.py  cli_workflow_output.py  cli_workflow_selection.py  cli_workflow_validation.py  cli_workflow_validation_policy.py  cli_workflows.py  factories.py  session.py  session_helpers.py  session_mutation_flow.py  tui.py  tui_config_screen.py  tui_diff_helpers.py  tui_diff_view.py  tui_filters.py  tui_models.py  tui_pass_config.py  tui_presets.py  tui_progress_indicator.py  tui_rendering.py  tui_rendering_helpers.py
r2morph/adapters/: CLAUDE.md  __init__.py  disassembler.py  mock_disassembler.py  r2pipe_adapter.py
r2morph/analysis/: CLAUDE.md  __init__.py  _public_api.py  _register_names.py  abi_checker.py  abi_detection.py  abi_models.py  analyzer.py  call_graph.py  call_graph_builder.py  call_graph_cache.py  call_graph_entry_points.py  call_graph_models.py  call_graph_parsing.py  call_graph_serialization.py  cfg.py  cfg_builder_helpers.py  cfg_exception_helpers.py  cfg_models.py  critical_nodes.py  critical_nodes_detection.py  critical_nodes_models.py  critical_nodes_scorer.py  dataflow.py  dataflow_block_sets.py  dataflow_models.py  dataflow_parsing.py  dataflow_queries.py  defuse.py  defuse_models.py  dependencies.py  diff_analyzer.py  enhanced_analyzer.py  enhanced_analyzer_detection.py  enhanced_analyzer_lifecycle.py  enhanced_analyzer_models.py  enhanced_analyzer_phases.py  enhanced_analyzer_reporting.py  exception.py  exception_models.py  (+36 more)
r2morph/core/: CLAUDE.md  __init__.py  analysis_cache.py  analysis_cache_cleanup.py  analysis_cache_entries.py  analysis_cache_keys.py  analysis_cache_lifecycle.py  analysis_cache_models.py  analysis_cache_queries.py  analysis_cache_storage.py  assembly.py  binary.py  binary_file_lock.py  binary_lifecycle.py  config.py  constants.py  engine.py  engine_lifecycle.py  engine_mutations.py  engine_output.py  engine_run.py  engine_wiring.py  function.py  instruction.py  memory_manager.py  parallel.py  parallel_checkpointing.py  parallel_execution_summary.py  parallel_executor.py  parallel_executor_models.py  parallel_executor_task_helpers.py  parallel_executor_task_policies.py  parallel_pass_execution.py  parallel_planner.py  parallel_planner_helpers.py  parallel_result_merger.py  parallel_result_merger_helpers.py  parallel_rollback.py  parallel_stage_execution.py  parallel_work_queue.py  (+22 more)
r2morph/crypto/: __init__.py  aes.py
r2morph/detection/: CLAUDE.md  __init__.py  anti_analysis_bypass.py  anti_analysis_bypass_methods.py  anti_analysis_bypass_models.py  anti_analysis_detection.py  control_flow_detector.py  control_flow_detector_models.py  entropy_analyzer.py  entropy_analyzer_models.py  evasion_scorer.py  evasion_scorer_helpers.py  evasion_scorer_models.py  obfuscation_detector.py  obfuscation_detector_models.py  packer_signature_analysis.py  packer_signature_catalogs.py  packer_signature_models.py  packer_signatures.py  pattern_catalogs.py  pattern_matcher.py  pattern_matcher_models.py  pattern_matcher_search.py  similarity_hasher.py
r2morph/devirtualization/: CLAUDE.md  __init__.py  binary_rewriter.py  binary_rewriter_io.py  binary_rewriter_models.py  binary_rewriter_planning.py  cfo_simplifier.py  cfo_simplifier_detection.py  cfo_simplifier_models.py  cfo_simplifier_transforms.py  iterative_simplifier.py  iterative_simplifier_models.py  iterative_simplifier_passes.py  mba_solver.py  mba_solver_helpers.py  vm_handler_analyzer.py  vm_handler_metrics.py  vm_handler_models.py  vm_handler_patterns.py
r2morph/export/: __init__.py  nasm_export.py
r2morph/instrumentation/: __init__.py  frida_engine.py
r2morph/mutations/: CLAUDE.md  __init__.py  abi_aware_base.py  abi_hook.py  anti_disassembly.py  anti_disassembly_snippets.py  api_hashing.py  api_hashing_hashes.py  api_hashing_resolvers.py  arm_expansion_rules.py  arm_rules.py  base.py  block_reordering.py  block_reordering_helpers.py  cff_dispatcher.py  cff_jump_obfuscator.py  cff_opaque_predicates.py  cfg_aware.py  code_mobility.py  code_mobility_helpers.py  code_mobility_models.py  code_virtualization.py  code_virtualization_multi_vm.py  code_virtualization_vm.py  conflict_detector.py  conflict_models.py  conflict_semantic.py  constant_unfolding.py  constant_unfolding_helpers.py  control_flow_flattening.py  control_flow_flattening_helpers.py  control_flow_flattening_strategies.py  data_flow_mutation.py  data_flow_mutation_helpers.py  dead_code_injection.py  dead_code_injection_helpers.py  full_cff.py  full_cff_helpers.py  full_cff_patching.py  function_outlining.py  (+45 more)
scripts/: quality-gate.sh
tests/: __init__.py  conftest.py
(+1037 files in other folders)
