[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r2morph"
version = "0.1.0"
description = "A metamorphic binary transformation engine based on r2pipe and radare2"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Marc Rivero", email = "mriverolopez@gmail.com"}
]
maintainers = [
    {name = "Marc Rivero", email = "mriverolopez@gmail.com"}
]
keywords = [
    "binary-analysis",
    "metamorphic",
    "code-transformation",
    "radare2",
    "r2pipe",
    "reverse-engineering",
    "binary-mutation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: System :: Software Distribution",
]

dependencies = [
    "r2pipe>=1.9.0",
    "capstone>=5.0.0",
    "keystone-engine>=0.9.2",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.12.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]
# Advanced analysis optional dependencies
enhanced = [
    # Include all enhanced analysis capabilities
    "angr>=9.2.0",
    "z3-solver>=4.12.0",
    "frida>=16.0.0",
    "frida-tools>=12.0.0",
    "triton-library>=1.0.0rc4",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
]
syntia = [
    "cvc5>=1.0.0",  # SMT solver for Syntia
    "pysmt>=0.9.0",  # SMT abstraction layer
    "claripy>=9.2.0",  # Constraint solving for angr
]
devirtualization = [
    "miasm>=0.1.0",  # Additional disassembly framework
    "unicorn>=2.0.0",  # CPU emulator engine
    "qiling>=1.4.0",  # Advanced emulation framework
]
machine-learning = [
    "scikit-learn>=1.3.0",  # For pattern recognition
    "torch>=2.0.0",  # For neural network based analysis
    "transformers>=4.30.0",  # For advanced semantic analysis
]
all = [
    # Include all optional dependencies
    "angr>=9.2.0",
    "z3-solver>=4.12.0",
    "frida>=16.0.0",
    "frida-tools>=12.0.0",
    "triton-library>=1.0.0rc4",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
    "cvc5>=1.0.0",
    "pysmt>=0.9.0",
    "claripy>=9.2.0",
    "miasm>=0.1.0",
    "unicorn>=2.0.0",
    "qiling>=1.4.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.scripts]
r2morph = "r2morph.cli:main"

[project.urls]
Homepage = "https://github.com/seifreed/r2morph"
Documentation = "https://github.com/seifreed/r2morph/blob/main/README.md"
Repository = "https://github.com/seifreed/r2morph"
Issues = "https://github.com/seifreed/r2morph/issues"
"Source Code" = "https://github.com/seifreed/r2morph"
"Bug Tracker" = "https://github.com/seifreed/r2morph/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["r2morph*"]
exclude = ["tests*", "docs*", "examples*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=r2morph",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.coverage.run]
source = ["r2morph"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
