[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r2morph"
version = "0.2.0"
description = "Metamorphic binary mutation engine with structural validation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Marc Rivero", email = "mriverolopez@gmail.com"}
]
maintainers = [
    {name = "Marc Rivero", email = "mriverolopez@gmail.com"}
]
keywords = [
    "binary-analysis",
    "metamorphic",
    "code-transformation",
    "radare2",
    "r2pipe",
    "reverse-engineering",
    "binary-mutation",
    "binary-patching",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: System :: Software Distribution",
]

dependencies = [
    "r2pipe>=1.9.0",
    "capstone>=5.0.0",
    "keystone-engine>=0.9.2",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.12.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]
enhanced = [
    "angr>=9.2.0; platform_system != \"Windows\"",
    "z3-solver>=4.12.0",
    "frida>=16.0.0; platform_system != \"Windows\"",
    "frida-tools>=12.0.0; platform_system != \"Windows\"",
    "triton-library>=1.0.0rc4; platform_system == \"Linux\"",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
]
syntia = [
    "cvc5>=1.0.0",
    "pysmt>=0.9.0",
    "claripy>=9.2.0",
]
devirtualization = [
    "miasm>=0.1.0",
    "unicorn>=2.0.0",
    "qiling>=1.4.0",
]
machine-learning = [
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
all = [
    "angr>=9.2.0; platform_system != \"Windows\"",
    "z3-solver>=4.12.0",
    "frida>=16.0.0; platform_system != \"Windows\"",
    "frida-tools>=12.0.0; platform_system != \"Windows\"",
    "triton-library>=1.0.0rc4; platform_system == \"Linux\"",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
    "cvc5>=1.0.0",
    "pysmt>=0.9.0",
    "claripy>=9.2.0",
    "miasm>=0.1.0",
    "unicorn>=2.0.0",
    "qiling>=1.4.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.scripts]
r2morph = "r2morph.cli:app"

[project.urls]
Homepage = "https://github.com/seifreed/r2morph"
Documentation = "https://github.com/seifreed/r2morph#readme"
Repository = "https://github.com/seifreed/r2morph"
Issues = "https://github.com/seifreed/r2morph/issues"
Changelog = "https://github.com/seifreed/r2morph/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=r2morph",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "stable: marks tests for stable mutation passes (nop, substitute, register)",
    "experimental: marks tests for experimental mutation passes (expand, block, opaque, dead-code, cff)",
    "product_smoke: marks product acceptance tests for CI",
    "slow: marks tests that take longer than 10 seconds",
    "unit: marks unit tests",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["r2morph"]
branch = true
omit = [
    "tests/*",
    "r2morph/adapters/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["z3", "z3.*", "capstone", "capstone.*", "keystone", "keystone.*", "unicorn", "unicorn.*", "frida", "frida.*", "r2pipe", "r2pipe.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["r2morph*"]
exclude = ["tests*", "docs*", "examples*", "scripts*"]